Link to curve detectors

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -27,8 +27,8 @@
 
     <h2 style="display: none;">Introduction</h2>
     <p>
-      Why should we study the awkwardly-named "high-low frequency detectors" when we've just walked you through curve
-      detectors in detail? There's a strategic argument from the author's side: everybody® would guess that vision
+      Why should we study the awkwardly-named "high-low frequency detectors" when we've just walked you through <a href="https://distill.pub/2020/circuits/curve-detectors/">curve
+      detectors</a> in detail? There's a strategic argument from the author's side: everybody® would guess that vision
       networks contain curve detectors. It's easy to imagine how they are built up from earlier edge detectors, and
       they're common enough that neuroscientists routinely find them in animal visual cortices. "High-low frequency
       detectors", on the other hand, form a family of features we did not expect to find. Still, they have many of the
