--- a/src/diagrams/upstream-nmf.ejs
+++ b/src/diagrams/upstream-nmf.ejs
@@ -123,11 +123,11 @@
         <% } %>
     </div>
     <figcaption>
-        <p>Using NMF factorization on the weights connecting six High-Low frequency detectors to the two directly
+        <p>Using NMF factorization on the weights connecting six high-low frequency detectors to the two directly
             preceding convolutional layers, <code>conv2d2</code> and <code>conv2d1</code>. The two factors correspond to
             high and low frequencies, as becomes apparent in their feature visualizations. (Left column).</p>
         <p>Their spatial arrangement is also very clear, with LF factors <span class="legend-label support">supporting
-                areas</span> in which High-Low frequency detectors expect low frequencies, and <span
+                areas</span> in which high-low frequency detectors expect low frequencies, and <span
                 class="legend-label inhibit">inhibiting areas</span> in which they expect HF factors. The two factors
             are very close to symmetric. Weight magnitudes normalized between -1 <img class="color-legend"
                 src="diagrams/2.1-upstream-nmf/pn-legend.png" /> and 1.</p>
