--- a/src/index.ejs
+++ b/src/index.ejs
@@ -174,14 +174,17 @@
     <p>A natural guess would be to assume these filters combine low frequency detectors and high frequency detectors.
       Let us factorize the connections<d-footnote>Between two adjacent layers, "connections" reduces to the weights
         between the two layers. Sometimes we are interested in observing connectivity between layers that may not be
-        directly adjacent. Because our model, a deep convnet, is non-linear, we will neeed to approximate the
+        directly adjacent. Because our model, a deep convnet, is non-linear, we will need to approximate the
         connections. A simple approach that we take is to linearize the model by removing the non-linearities. While
         this is not a great approximation of the model's behavior, it does give a reasonable intuition for
-        counterfactual influence: had the neurons in the intermediate layer fired, how would it have affected neurons in
+        counterfactual influence: had the neurons in the intermediate layer fired, how it would have affected neurons in
         the downstream layers. We treat positive and negative influences separately.</d-footnote> between lower level
       features and the High-Low frequency detectors we already found:</p>
 
-    <p>NMFing the weights into 2 factors recovers low/high frequency neuron clusters.</p>
+    <p>
+
+
+      NMFing the weights into 2 factors recovers low/high frequency neuron clusters.</p>
 
     <p class="todo done"> Either fix with subgrid, or rethink layout!</p>
 
@@ -216,26 +219,31 @@
     <h2>Downstream Circuits</h2>
     <p>How are high-low frequency detectors used in the construction of higher-level features?</p>
 
-    <h3>Object boundary detectors</h3>
+    <span class="todo">Are there other classes of downstream features that these features contribute to?</span>
+    <h3>Object boundary detection</h3>
 
     <p>In past discussion of <a href="https://distill.pub/2020/circuits/early-vision/#mixed3b">mixed3b</a>, we discussed <i><a href="https://distill.pub/2020/circuits/early-vision/#group_mixed3b_boundary">object boundary detectors</a></i>, neurons which detect boundaries between objects. These detectors combine multiple different cues from lower layers, including high-low frequency detectors, edge detectors, color contrast detectors, and end of line detectors.
     </p>
 
+    <p>Object boundary detectors are not the same as edge detectors or curve detectors. Although they are sensitive to edges (indeed, edge detectors contribute some of their input weights!), object boundary detectors are also sensitive to other indicators that one object has ended and another has begun. Object boundary detectors therefore detect a more general feature than edges alone.</p>
+
+    <p>High-low frequency detectors contribute to object boundary detectors' ability to detect boundaries by providing another type of cue that an object has ended and its background has begun. As seen in Dataset Examples, above, a high-low frequency change can indicate the border between a foreground object and its more blurry background.</a>
+
+    <p>Object boundary detectors are sensitive to the rotation of the high-low frequency detectors that activate them. Consider how <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/mixed3b_345.html"><code>mixed3b</code> 345</a>, a vertical boundary detector, is activated by high-low frequency detectors separated by a vertical line, and along a roughly vertical line of positive weights.</p>
+
+    <p>These detectors are, however, invariant to the "sidedness" of the high-low frequency detectors that activate them, instead being activated by both possible polarities. Notice that among the high-low frequency detectors that activate <code>mixed3b</code> 345, the high-frequency side may either be on the left or on the right.</p>
+
     <span class="todo">TODO(csvoss) Include JS snippet to autolink these neurons.</span>
+    <span class="todo">Also TODO(csvoss): Lighten the 'Edges', 'Color Contrasts', and 'End of Line' components to de-emphasize them without removing them wholesale.</span>
 
     <figure style='image-rendering: pixelated;'>
       <img src="images/Boundary.svg" />
     </figure>
 
-    <p>Object boundary detectors are not the same as edge detectors or curve detectors. Although they are sensitive to edges (indeed, edge detectors form some of their input weights!), object boundary detectors are also sensitive to other indicators that one object has ended and another has begun. Object boundary detectors therefore detect a more general feature than edges alone.
+    <p>
+      Downstream of <code>mixed3b</code>, high-low frequency layers ultimately play a role in detecting more sophisticated object shapes in <code>mixed4a</code> by contributing to the detection of boundaries and contiguity.
 
-    <p>These detectors have a number of <i>invariances</i>. For one example, object boundary detectors are invariant to the sidedness of high-low frequency detectors, instead being activated by both possible polarities. Consider how <a href="https://storage.googleapis.com/inceptionv1-weight-explorer/mixed3b_345.html"><code>mixed3b</code> 345</a>, a vertical boundary detector, is activated by high-low frequency detectors separated by a similarly-oriented vertical line.</p>
-
-    <p>Similarly, object boundary detectors are invariant to the color on either side of the boundary of the color contrast detectors that activate them, instead being sensitive only to the directionality of the color contrast detectors.</p>
-
-    <p>These detectors are therefore most activated by strong differences between the sides of a boundary whose <i>specific orientation</i> they are sensitive to, while being invariant to the implementation details of those strong differences.</p>
-
-    <p>Although <code>mixed3b</code> 345 detects an object boundary along a straight vertical line, the boundary detected need not be strictly a line. Below we give examples of 8 neurons from (TODO is this right) (TODO how were these neurons even chosen?) <code>mixed4a</code> where high-low frequency detectors play a role in detecting object continuity and object boundaries.
+      Below we give the 8 neurons from <code>mixed4a</code> with the strongest expanded weights on our 8 boundary detectors.
     </p>
 
     <p class="todo">Label the neurons of the top row here?</p>
