--- a/src/diagrams/upstream-nmf.ejs
+++ b/src/diagrams/upstream-nmf.ejs
@@ -123,7 +123,7 @@
         <% } %>
     </div>
     <figcaption>
-        <p>Using NMF factorization on the weights connecting six high-low frequency detectors to the two directly
+        <p>Using NMF factorization on the weights connecting six high-low frequency detectors in InceptionV1 to the two directly
             preceding convolutional layers, <code>conv2d2</code> and <code>conv2d1</code>. The two factors correspond to
             high and low frequencies, as becomes apparent in their feature visualizations. (Left column).</p>
         <p>Their spatial arrangement is also very clear, with LF factors <span class="legend-label support">supporting
