--- a/src/index.ejs
+++ b/src/index.ejs
@@ -20,7 +20,7 @@
   <d-title>
     <h1><span style="display: inline; color: gray; margin-right: 0.25em">2.4</span>High-Low Frequency Detectors</h1>
     <p>A family of early-vision filters reacting to contrasts between spatial gratings of different frequency</p>
-    <figure id="hero" class="l-body todo">I'm just a figure who's a hero for fun.</figure>
+    <!-- <figure id="hero" class="l-body todo">I'm just a figure who's a hero for fun.</figure> -->
   </d-title>
 
   <d-article>
@@ -28,7 +28,7 @@
     <h2 style="display: none;">Introduction</h2>
     <p>
       Why should we study the awkwardly-named "high-low frequency detectors" when we've just walked you through <a href="https://distill.pub/2020/circuits/curve-detectors/">curve
-      detectors</a> in detail? There's a strategic argument from the author's side: everybody® would guess that vision
+      detectors</a> in detail? There's a strategic argument from the author's side: anyone would guess that vision
       networks contain curve detectors. It's easy to imagine how they are built up from earlier edge detectors, and
       they're common enough that neuroscientists routinely find them in animal visual cortices. "High-low frequency
       detectors", on the other hand, form a family of features we did not expect to find. Still, they have many of the
@@ -41,7 +41,7 @@
     <h2>Empirical Observation</h2>
 
     <h4>Feature Visualization</h4>
-    <p>We originally found high-low frequency detectors by studying models' neurons' <a
+    <p>We originally found high-low frequency detectors by studying <a
         href="//distill.pub/2017/feature-visualization">feature visualizations</a>: synthetic inputs
       optimized to elicit maximal activation of a single, specific neuron.</p>
     <style>
@@ -156,8 +156,6 @@
       to visualize this volume in various ways to show it on this 2D screen.
     </p> -->
 
-    <p class="todo done">Legend @shan; smarter ideas? No responsiveness? etc.</p>
-
     <d-figure id="1.4-tuning-curves">
       <figure></figure>
     </d-figure>
@@ -173,18 +171,14 @@
     <p>How are high-low frequency detectors constructed from lower-level features?</p>
 
     <p>A natural guess would be to assume these filters combine low frequency detectors and high frequency detectors.
-      Let us factorize the connections<d-footnote>Between two adjacent layers, "connections" reduces to the weights
+      Factorizing the connections<d-footnote>Between two adjacent layers, "connections" reduces to the weights
         between the two layers. Sometimes we are interested in observing connectivity between layers that may not be
         directly adjacent. Because our model, a deep convnet, is non-linear, we will need to approximate the
         connections. A simple approach that we take is to linearize the model by removing the non-linearities. While
         this is not a great approximation of the model's behavior, it does give a reasonable intuition for
         counterfactual influence: had the neurons in the intermediate layer fired, how it would have affected neurons in
         the downstream layers. We treat positive and negative influences separately.</d-footnote> between lower level
-      features and the high-low frequency detectors we already found:</p>
-
-    <p>NMFing the weights into 2 factors recovers low/high frequency neuron clusters.</p>
-
-    <p class="todo">Fix alignment of leftmost column?</p>
+      features and the high-low frequency detectors we already found confirms this guess: NMFing the weights into two factors recovers a cluster of low frequency neurons and a cluster of high frequency neurons.</p>
 
     <%= require('./diagrams/upstream-nmf.ejs')() %>
 
