--- a/src/index.ejs
+++ b/src/index.ejs
@@ -251,9 +251,9 @@
       <img src="diagrams/3.2-downstream-nmf/placeholder.png" />
       <figcaption class="figcaption">
         <p>8 neurons from <code>mixed4a</code> (top row) with the highest L2 norm of weights on the given 9 boundary detectors (left column) from <code>mixed3a</code>.</p>
-        <p>Where a neuron is <span class="legend-label support">activated</span> by a high-low frequency detector in some direction, the object typically has a <i>boundary</i> orthogonal to that direction.</p>
+        <p>Where a neuron is <span class="legend-label support">activated</span> by a high-low frequency detector in some direction, the object typically has a <i>boundary</i> along the same line.</p>
         <p>Where a neuron is <span
-        class="legend-label inhibit">inhibited</span> by a high-low frequency detector in some direction, the object typically has <i>contiguity</i> in that direction.</p>
+        class="legend-label inhibit">inhibited</span> by a high-low frequency detector in some direction, the object typically has <i>contiguity</i> orthogonal to the line of high-low frequency change.</p>
       </figcaption>
     </figure>
 
