--- a/src/diagrams/similar-directions.ejs
+++ b/src/diagrams/similar-directions.ejs
@@ -61,11 +61,9 @@
     <%= require('./similar-directions-model.ejs')({model}) %>
     <%}%>
     <figcaption>
+      <p>Note these are actual channels, not linear combinations approximating the detectors in InceptionV1.</p>
         <p>
-            High-low frequency detectors similar to ones in InceptionV1 can be found in a variety of architectures; AlexNet, InceptionV4, and ResnetV2-50 shown here. Note these are actual channels, not linear combinations approximating the detectors in InceptionV1.
-        </p>
-        <p>
-            We also note that these detectors are found at very similar depths within the different networks.
+            Note also that these detectors are found at very similar depths within the different networks.
         </p>
     </figcaption>
 </figure>
