--- a/src/index.ejs
+++ b/src/index.ejs
@@ -280,7 +280,9 @@
 
     <%= require('./diagrams/universality.ejs')() %>
 
-    <h4>Tuning curves in other models</h4>
+
+    <!-- Moved to earlier 'tuning curves' section. -->
+    <!-- <h4>Tuning curves in other models</h4>
     <p>Show tuning curves!</p>
 
     <figure id="4.2-similar-detectors">
@@ -289,8 +291,10 @@
         Top k filters responding to stimuli from earlier section
       </figcaption>
     </figure>
+    -->
 
-    <h4>Re-occurence at deeper layers at different scale</h4>
+    <!-- Postponed! TODO(csvoss). Perhaps discuss after 'Downstream Circuits'? -->
+    <!-- <h4>Re-occurence at deeper layers at different scale</h4>
     <p>Show re-occurence at higher layers at different scales?</p>
 
     <figure id="4.3-higher-layers">
@@ -299,7 +303,7 @@
         Top k filters responding to stimuli from earlier section. Compare their response to earlier layer hilo
         detectors; ideally show frequency gap / non-huge-overlap in response 2D tuning curve.
       </figcaption>
-    </figure>
+    </figure> -->
 
 
     <h2>Conclusion</h2>
