Tweak this wording

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -275,7 +275,7 @@
     <%= require('./diagrams/similar-directions.ejs')() %>
 
     <p>
-      As with InceptionV1, we can perform NMF on the weights of these neurons and find that we recover two clusters – one high-frequency and one low-frequency – that each contribute in predictable ways to the construction of the model's high-low frequency detector.
+      As with InceptionV1, we can perform NMF on the weights of these neurons and find that we recover two clusters that each contribute in predictable ways to the construction of the model's high-low frequency detector: one HF-factor and one LF-factor.
     </p>
 
     <%= require('./diagrams/universality.ejs')() %>
