Prune no-longer-needed notes; add more notes

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -164,8 +164,6 @@
       By argmaxing over the two frequencies we recover the angle-response curve from the previous section:
     </p>
 
-    <span class="todo">Radial tuning curve for HLF detectors here?</span>
-
     <!--Upstream Circuits-->
     <h2>Upstream Circuits</h2>
     <p>How are high-low frequency detectors constructed from lower-level features?</p>
@@ -220,8 +218,8 @@
       </figcaption>
     </figure>
 
-    <h4>Joint NMF of weights</h4>
-
+    <h4>Synthetic stimuli for HF-factor and LF-factor</h4>
+    <span class="todo">Synthetic stimuli for just for HF and LF here?</span>
 
 
     <!--Downstream Circuits-->
